Align files API with Excel test specification17578886